After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 725147 - lua-factory: Support embedded resources
lua-factory: Support embedded resources
Status: RESOLVED FIXED
Product: grilo
Classification: Other
Component: lua
git master
Other Mac OS
: Normal normal
: ---
Assigned To: grilo-maint
grilo-maint
Depends on:
Blocks:
 
 
Reported: 2014-02-25 13:49 UTC by Bastien Nocera
Modified: 2014-12-05 09:33 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
lua-factory: Load resources when available for each script (2.58 KB, patch)
2014-12-01 16:17 UTC, Bastien Nocera
committed Details | Review

Description Bastien Nocera 2014-02-25 13:49:13 UTC
This would be useful to embed icons into the source.
Comment 1 Bastien Nocera 2014-12-01 16:17:42 UTC
Created attachment 291933 [details] [review]
lua-factory: Load resources when available for each script

When loading a script called "XXX.lua", we will try to load an
"XXX.gresource" file from the same directory.

This allows lua sources to have icons, addressed through resource:///
Comment 2 Victor Toso 2014-12-02 16:09:54 UTC
Review of attachment 291933 [details] [review]:

ack

::: src/lua-factory/grl-lua-factory.c
@@ +206,3 @@
+  resource_path = g_string_free (str, FALSE);
+
+  resource = g_resource_load (resource_path, NULL);

Worth checking for error here? (debug purposes)
Comment 3 Bastien Nocera 2014-12-05 09:32:59 UTC
Attachment 291933 [details] pushed as 440a92c - lua-factory: Load resources when available for each script