lua-factory: Load resources when available for each script

When loading a script called "XXX.lua", we will try to load an
"XXX.gresource" file from the same directory.

This allows lua sources to have icons, addressed through resource:///

https://bugzilla.gnome.org/show_bug.cgi?id=725147